<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_toast"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btnShowAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_alert"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btnCustomDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btnMyCustomDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_custom_dialog"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textSize="22sp"/>
</LinearLayout>