<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_exit_app"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <ImageView
            android:id="@+id/imvCheck"
            android:contentDescription="@string/check"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_check"/>
        <ImageView
            android:id="@+id/imgClose"
            android:contentDescription="@string/close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_close"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

</LinearLayout>